--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <style>
     html {
       box-sizing: border-box;
-      background: linear-gradient(90deg, rgba(149,61,203,1) 19%, rgba(203,61,95,1) 41%, rgba(255,179,0,1) 77%);;
+      background: linear-gradient(90deg, rgba(149,61,203,1) 19%, rgba(203,61,95,1) 41%, rgba(255,179,0,1) 77%);
       font-family: sans-serif,'Poppins';
       font-size: 20px;
       font-weight: 200;
